vlib/v/parser/tests/struct_no_body_err.vv
struct Lexer

struct Token {
	token_u string
}

fn main() {
	token := Token{"this is a token"}
	println(token.token_u)
}